--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p id="text">Tweety - Ivan Greko</p>
     <audio src="Tweety.mp3" id="audioFile" controls></audio>
     <h4>*Το τραγούδι τελειώνει στα 2 λεπτά*</h4>
+    <h4>Μονο απο υπολογιστη!!</h4>
     <h5>Made by Nikos Mattheou</h5>
 
 </body>
